@@ -1,3 +1,8 @@
+2000-08-29  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* egg.cc: Support external_criteria eggs.
+	* Watch for alt-key going up in Get_click.
+
 2000-08-28  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* Fixed 'cube' puzzle, by adding 'framenum' parm. to find_nearby().
